Fix #33210: Diffuse Pass in scale node leads to problems

Was own mistake in render layers interpolation changes.